[package]
name = "klipfetch"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FraI3mega/klipfetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
color-eyre = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1.0"
clap = { version = "4.5.20", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
